# MLOps

./: .coverage  .dockerignore  .env.example  Dockerfile  README.md  create_artifacts.py  drift.py  main.py  manual_pred.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
.hypothesis/constants/: 3e21297ef23f6ce7  57d07fdf724d95f9  6e1a010054c8da35  6f2276458163aa27  8ac79361e89ddf37  8f5f1682bb213209  a028d110d134e45b  ad64c17de20fb72c  c21d4e8d8d1d3c22  c6f8eb7522690a22  da39a3ee5e6b4b0d  eec019df8eba3cc6  fb7fe038586ee5c4  fea0b594dca38dc8
.hypothesis/examples/04e6b3400353b141/: 0cb21a337027d368  1ce737dcfbcb104f  23fcc962f0d0e738  4349f7f138c0546c  46156efca611a545  55e2cff0312cd514  79b7bf956a617886  7c17c736990fcec1  7c456766fb974788  7fa16a31752089a8  9b87291c875b878d  b4cae27acaf5df2f  bb18d5f7483bfae2  de5eaa2cf2274a95  e4078108d65affb5  ff3835815f190a8d
.hypothesis/examples/0cb21a337027d368/: 7c77b49dc843251b
.hypothesis/examples/7c17c736990fcec1/: cd031f028fc1b4a3
.hypothesis/examples/7c456766fb974788/: 15f4f0dc3d237c5e
.hypothesis/examples/de5eaa2cf2274a95/: 91cc7946b0d603e2
.kiro/specs/ml-pipeline-refactor-cicd/: design.md  requirements.md  tasks.md
airflow/: .env  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: etl.py  feature_store.py  predict.py  train.py  treinamento.py
api/: models.py  request.py
config/: __init__.py  settings.py
data/: diabetes.csv.dvc
data/artifacts/: .gitignore  README.md  predictor.parquet  target.parquet
data/artifacts/monitoring/: README.md  monitoring_history.csv  monitoring_history.jsonl  monitoring_history.parquet  monitoring_summary.csv
data/artifacts/predictions/: .gitkeep  README.md
eda_streamlit/: eda.py
etl_functions/: etl.py  feature_store_creation.py
feature_store/data/: my_training_dataset.parquet  my_training_dataset2.parquet
feature_store/feature_repo/: example_repo.py
feature_store/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
flask/: api.py  request.py
framework/: api_consctructor.py  api_request.py  manual_predict_by_api_request.py  prediction.py  training.py
mlflow/mlartifacts/467326610704772702/c61db4638765422da6b7f01484d55d8d/artifacts/: features.txt
mlflow/mlartifacts/467326610704772702/models/m-43046b6222674fd1993a21ebe3bc7e0f/artifacts/: MLmodel  model.pkl  python_env.yaml
mlflow/mlartifacts/467326610704772702/models/m-7c95bd8e9c73437cb44798dd170fdf72/artifacts/: MLmodel  requirements.txt
mlflow/mlartifacts/467326610704772702/models/m-ac865b06c2bc452cb31bd93ca63b71c9/artifacts/: MLmodel
mlflow/mlartifacts/467326610704772702/models/m-b8cb3e3895ef4ab1881adbd9f999aa63/artifacts/: MLmodel  conda.yaml
mlflow/mlartifacts/467326610704772702/models/m-da8e3b2cdad541c3af8bfd014b1ec21e/artifacts/: MLmodel
mlflow/mlruns/0/: meta.yaml
mlflow/mlruns/467326610704772702/: meta.yaml
mlflow/mlruns/467326610704772702/11822f3583454c709ffcc4882225d1d3/: meta.yaml
mlflow/mlruns/467326610704772702/11822f3583454c709ffcc4882225d1d3/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/11822f3583454c709ffcc4882225d1d3/outputs/m-43046b6222674fd1993a21ebe3bc7e0f/: meta.yaml
mlflow/mlruns/467326610704772702/11822f3583454c709ffcc4882225d1d3/tags/: dataset
mlflow/mlruns/467326610704772702/4f386bb3ab344c57b017b78f482d793a/: meta.yaml
mlflow/mlruns/467326610704772702/4f386bb3ab344c57b017b78f482d793a/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/4f386bb3ab344c57b017b78f482d793a/outputs/m-ac865b06c2bc452cb31bd93ca63b71c9/: meta.yaml
mlflow/mlruns/467326610704772702/4f386bb3ab344c57b017b78f482d793a/params/: train_positive_ratio
mlflow/mlruns/467326610704772702/66fcebaea05d448e9d171b3677c8f940/: meta.yaml
mlflow/mlruns/467326610704772702/66fcebaea05d448e9d171b3677c8f940/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/66fcebaea05d448e9d171b3677c8f940/outputs/m-b8cb3e3895ef4ab1881adbd9f999aa63/: meta.yaml
mlflow/mlruns/467326610704772702/a7ac3e11cb354c679bd4f49ad6a84686/: meta.yaml
mlflow/mlruns/467326610704772702/a7ac3e11cb354c679bd4f49ad6a84686/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/a7ac3e11cb354c679bd4f49ad6a84686/outputs/m-7c95bd8e9c73437cb44798dd170fdf72/: meta.yaml
mlflow/mlruns/467326610704772702/c61db4638765422da6b7f01484d55d8d/: meta.yaml
mlflow/mlruns/467326610704772702/c61db4638765422da6b7f01484d55d8d/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/c61db4638765422da6b7f01484d55d8d/outputs/m-da8e3b2cdad541c3af8bfd014b1ec21e/: meta.yaml
mlflow/mlruns/467326610704772702/c61db4638765422da6b7f01484d55d8d/tags/: developer  mlflow.runName
mlflow/mlruns/467326610704772702/models/m-43046b6222674fd1993a21ebe3bc7e0f/: meta.yaml
mlflow/mlruns/467326610704772702/models/m-43046b6222674fd1993a21ebe3bc7e0f/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/models/m-7c95bd8e9c73437cb44798dd170fdf72/: meta.yaml
mlflow/mlruns/467326610704772702/models/m-7c95bd8e9c73437cb44798dd170fdf72/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/models/m-7c95bd8e9c73437cb44798dd170fdf72/tags/: mlflow.modelVersions
mlflow/mlruns/467326610704772702/models/m-ac865b06c2bc452cb31bd93ca63b71c9/: meta.yaml
mlflow/mlruns/467326610704772702/models/m-ac865b06c2bc452cb31bd93ca63b71c9/metrics/: acc_test  acc_train
mlflow/mlruns/467326610704772702/models/m-b8cb3e3895ef4ab1881adbd9f999aa63/: meta.yaml
mlflow/mlruns/467326610704772702/models/m-da8e3b2cdad541c3af8bfd014b1ec21e/: meta.yaml
mlflow/mlruns/models/diabete_model/: meta.yaml
mlflow/mlruns/models/diabete_model/version-1/: meta.yaml
src/: api_consctructor.py  api_request.py  manual_predict_by_api_request.py  prediction.py  training.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_dag_import.py
tests/property/: __init__.py  test_api_config.py  test_api_validation.py  test_config_properties.py
tests/unit/: __init__.py  test_api.py  test_etl.py  test_prediction.py  test_training.py
(+4 files in other folders)
